src/scss/tab/feature/_covid.scss
.covidContainer {
    display: flex;
    align-items: center;
    width: 100%;
  }
    
  .covidFlag{
    margin:15px;
    border:1px solid black;
    box-shadow: 5px 10px #888888;
  }

