fixed the gap issue

--- a/src/scss/tab/feature/_covid.scss
+++ b/src/scss/tab/feature/_covid.scss
@@ -5,7 +5,6 @@
   }
     
   .covidFlag{
-    margin:15px;
     border:1px solid black;
     box-shadow: 5px 10px #888888;
   }
